[package]
name = "graveler"
version = "0.1.0"
edition = "2021"



[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
#rand = { version = "0.8.5", features = ["small_rng"] }
rand = "0.8.5"
#rand_distr = "0.4.3"
#rand_xorshift = "0.3.0"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
